--- a/project_petpokets/app_petpokets/templates/app_petpokets/gatos.html
+++ b/project_petpokets/app_petpokets/templates/app_petpokets/gatos.html
@@ -6,51 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accesorios para Gato - PetPockets</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom"> 
         <div class="container-fluid">
           <button type="button" class="btn-light"><a href="{% url 'index' %}"><img src="{% static 'img/logopetpokets.png' %}" class="logo-custom" alt="PetPockets"></a></button>
-            <div class="dropdown">
+              <div class="dropdown">
                 <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Nuestros Productos
                 </button>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="perros.html">Accesorios para perros</a></li>
-                  <li><a class="dropdown-item" href="gatos.html">Accesorios para gatos</a></li>
-                  <li><a class="dropdown-item" href="comidaperros.html">Alimento para perros</a></li>
-                  <li><a class="dropdown-item" href="comidagatos.html">Alimento para gatos</a></li>
+                  <li><a class="dropdown-item" href="{% url 'perros' %}">Accesorios para perros</a></li>
+                  <li><a class="dropdown-item" href="{% url 'gatos' %}">Accesorios para gatos</a></li>
+                  <li><a class="dropdown-item" href="{% url 'comidaperros' %}">Alimento para perros</a></li>
+                  <li><a class="dropdown-item" href="{% url 'comidagatos' %}">Alimento para gatos</a></li>
                 </ul>
-            </div>
-            <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              </div>
+              <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Envios a domicilio
-            </button>
-            <nav class="navbar">
+              </button>
+              <nav class="navbar">
                 <div class="container-fluid">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search" style="width: 400px;">
-                        <button class="btn btn-light" type="submit"><img src="img/search.png" alt=""></button>
-                    </form>
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search" style="width: 400px;">
+                    <button class="btn btn-light" type="submit"><img src="{% static 'img/search.png' %}" alt="Buscar"></button>
+                  </form>
                 </div>
-            </nav>
-            <div class="dropdown">
+              </nav>
+              <div class="dropdown">
                 <button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
-                    Iniciar Sesión
+                  Iniciar Sesión
                 </button>
                 <form class="dropdown-menu p-2">
-                    <p>¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a></p>
-                    <div class="mb-3">
-                        <label for="exampleDropdownFormEmail2" class="form-label">Correo electrónico:</label>
-                        <input type="email" class="form-control" id="exampleDropdownFormEmail2">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleDropdownFormPassword2" class="form-label">Contraseña:</label>
-                        <input type="password" class="form-control" id="exampleDropdownFormPassword2">
-                    </div>
-                    <button type="submit" class="btn btn-light">Iniciar Sesión</button>
+                  <p>¿No tienes cuenta? <a href="{% url 'registro' %}">Regístrate aquí</a></p>
+                  <div class="mb-3">
+                    <label for="exampleDropdownFormEmail2" class="form-label">Correo electrónico:</label>
+                    <input type="email" class="form-control" id="exampleDropdownFormEmail2">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleDropdownFormPassword2" class="form-label">Contraseña:</label>
+                    <input type="password" class="form-control" id="exampleDropdownFormPassword2">
+                  </div>
+                  <button type="submit" class="btn btn-light">Iniciar Sesión</button>
                 </form>
-            </div>
+              </div>
             <!-- Carrito --> 
             <button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Carrito de Compras</button>      
         </div>
@@ -62,7 +62,7 @@
     <br><br>
     <div class="cards-line">
         <div class="card" style="width: 18rem;">
-            <img src="img/accesoriogato1.jpeg" class="card-img-top" alt="Collar con Pañuelo">
+            <img src="{% static 'img/accesoriogato1.jpeg' %}" class="card-img-top" alt="Collar con Pañuelo">
             <div class="card-body">
                 <h5 class="card-title">Collar con Pañuelo</h5>
                 <p class="card-text">$8.000</p>
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="img/accesoriogato2.jpeg" class="card-img-top" alt="Masajeadora">
+            <img src="{% static 'img/accesoriogato2.jpeg' %}" class="card-img-top" alt="Masajeadora">
             <div class="card-body">
                 <h5 class="card-title">Masajeadora</h5>
                 <p class="card-text">$20.000</p>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="img/accesoriogato3.jpeg" class="card-img-top" alt="Placa de grabado">
+            <img src="{% static 'img/accesoriogato3.jpeg' %}" class="card-img-top" alt="Placa de grabado">
             <div class="card-body">
                 <h5 class="card-title">Placa de grabado</h5>
                 <p class="card-text">$7.000</p>
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="img/accesoriogato4.jpeg" class="card-img-top" alt="Collar simple con cascabel">
+            <img src="{% static 'img/accesoriogato4.jpeg' %}" class="card-img-top" alt="Collar simple con cascabel">
             <div class="card-body">
                 <h5 class="card-title">Collar simple con cascabel</h5>
                 <p class="card-text">$4.000</p>
@@ -97,17 +97,17 @@
 
     <!-- Contenido de la ventana del carrito -->      
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasRightLabel">Carrito de compra</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <ul id="cartItems" class="list-group mb-3"></ul>
-            <h6>Total: $<span id="totalAmount">0</span></h6>
-        </div>
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasRightLabel">Carrito de compra</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul id="cartItems" class="list-group mb-3"></ul>
+        <h6>Total: <span id="totalAmount">0</span></h6>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="carrito.js"></script>
+    <script src="{% static 'carrito.js' %}"></script>
 </body>
 </html>
