--- a/project_petpokets/app_petpokets/templates/app_petpokets/perros.html
+++ b/project_petpokets/app_petpokets/templates/app_petpokets/perros.html
@@ -103,7 +103,7 @@
       </div>
       <div class="offcanvas-body">
         <ul id="cartItems" class="list-group mb-3"></ul>
-        <h6>Total: $<span id="totalAmount">0</span></h6>
+        <h6>Total: <span id="totalAmount">0</span></h6>
       </div>
     </div>
 
