--- a/project_petpokets/app_petpokets/templates/app_petpokets/registro.html
+++ b/project_petpokets/app_petpokets/templates/app_petpokets/registro.html
@@ -1,65 +1,67 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registro de Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom"> 
-        <div class="container-fluid">
-          <button type="button" class="btn-light"><a href="index.html"><img src="img/logopetpokets.png" class="logo-custom" alt=""></a></button>
-              <div class="dropdown">
-                <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Nuestros Productos
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="perros.html">Accesorios para perros</a></li>
-                  <li><a class="dropdown-item" href="gatos.html">Accesorios para gatos</a></li>
-                  <li><a class="dropdown-item" href="comidaperros.html">Alimento para perros</a></li>
-                  <li><a class="dropdown-item" href="comidagatos.html">Alimento para gatos</a></li>
-                </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom"> 
+    <div class="container-fluid">
+      <button type="button" class="btn-light"><a href="{% url 'index' %}"><img src="{% static 'img/logopetpokets.png' %}" class="logo-custom" alt="PetPockets"></a></button>
+          <div class="dropdown">
+            <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Nuestros Productos
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{% url 'perros' %}">Accesorios para perros</a></li>
+              <li><a class="dropdown-item" href="{% url 'gatos' %}">Accesorios para gatos</a></li>
+              <li><a class="dropdown-item" href="{% url 'comidaperros' %}">Alimento para perros</a></li>
+              <li><a class="dropdown-item" href="{% url 'comidagatos' %}">Alimento para gatos</a></li>
+            </ul>
+          </div>
+          <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Envios a domicilio
+          </button>
+          <nav class="navbar">
+            <div class="container-fluid">
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="¿Qué buscas?" aria-label="Search" style="width: 400px;">
+                <button class="btn btn-light" type="submit"><img src="{% static 'img/search.png' %}" alt="Buscar"></button>
+              </form>
+            </div>
+          </nav>
+          <div class="dropdown">
+            <button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+              Iniciar Sesión
+            </button>
+            <form class="dropdown-menu p-2">
+              <p>¿No tienes cuenta? <a href="{% url 'registro' %}">Regístrate aquí</a></p>
+              <div class="mb-3">
+                <label for="exampleDropdownFormEmail2" class="form-label">Correo electrónico:</label>
+                <input type="email" class="form-control" id="exampleDropdownFormEmail2">
               </div>
-              <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Envios a domicilio
-              </button>
-              <nav class="navbar">
-                <div class="container-fluid">
-                  <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search" style="width: 400px;">
-                    <button class="btn btn-light" type="submit"><img src="img/search.png" alt=""></button>
-                  </form>
-                </div>
-              </nav>
-              <div class="dropdown">
-                <button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
-                  Iniciar Sesion
-                </button>
-                <form class="dropdown-menu p-2">
-                  <p>¿No tienes cuenta? <a href="registro.html">Registrate aqui</a></p>
-                  <div class="mb-3">
-                    <label for="exampleDropdownFormEmail2" class="form-label">Correo electronico:</label>
-                    <input type="email" class="form-control" id="exampleDropdownFormEmail2">
-                  </div>
-                  <div class="mb-3">
-                    <label for="exampleDropdownFormPassword2" class="form-label">Contraseña:</label>
-                    <input type="password" class="form-control" id="exampleDropdownFormPassword2">
-                  </div>
-                  <button type="submit" class="btn btn-light">Iniciar Sesion</button>
-                </form>
+              <div class="mb-3">
+                <label for="exampleDropdownFormPassword2" class="form-label">Contraseña:</label>
+                <input type="password" class="form-control" id="exampleDropdownFormPassword2">
               </div>
-            <!-- Carrito --> 
-            <button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Carrito de Compras</button>      
-        </div>
-    </nav>
+              <button type="submit" class="btn btn-light">Iniciar Sesión</button>
+            </form>
+          </div>
+        <!-- Carrito --> 
+        <button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Carrito de Compras</button>      
+    </div>
+</nav>
     <br><br>
     <h4>REGISTRO</h4>  
     <br>
     <div class="container mt-5 form-custom">
-      <form id="miFormulario" novalidate>
+      <form id="miFormulario" method="post">
+          {% csrf_token %}
           <div class="mb-3">
               <label for="nombre" class="form-label">Nombre</label>
               <input type="text" class="form-control" id="nombre" name="nombre" required>
@@ -98,16 +100,14 @@
         </div>
         <div class="offcanvas-body">
           <ul id="cartItems" class="list-group mb-3"></ul>
-          <h6>Total: $<span id="totalAmount">0</span></h6>
+          <h6>Total: <span id="totalAmount">0</span></h6>
         </div>
       </div>
+      <br><br>
     
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
-    
-    <!-- Validaciones de formulario incluyendo Jquery -->
+    <!-- Validaciones de formulario incluyendo jQuery -->
     <script>
       $(document).ready(function() {
           $("#miFormulario").submit(function(event) {
@@ -187,7 +187,7 @@
           }
       });
   </script>
-<script src="carrito.js"></script>
+  <script src="{% static 'carrito.js' %}"></script>
 
-  </body>
+</body>
 </html>
